--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Caminar by TEMPLATED</title>
+		<title>ifhoqwflkflskfde</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Caminar <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="#">5606546wfe <span>by TEMPLATED</span></a></div>
 			</header>
 
 		<!-- Main -->
@@ -29,7 +29,7 @@
 							<img src="images/pic02.jpg" alt="" />
 						</div>
 						<header class="special">
-							<h2>Fringilla Fermentum Tellus</h2>
+							<h2>wfdsfsfesfe</h2>
 							<p>vehicula urna sed justo bibendum</p>
 						</header>
 						<div class="content">
