--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ifhoqwflkflskfde</title>
+		<title>우리집 강아지</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">5606546wfe <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="#">아토 <span>우리집 강아지</span></a></div>
 			</header>
 
 		<!-- Main -->
@@ -26,15 +26,17 @@
 					<section id="one" class="wrapper style1">
 
 						<div class="image fit flush">
-							<img src="images/pic02.jpg" alt="" />
+							<img src="atoimg/202112.jpg" alt="" />
 						</div>
 						<header class="special">
-							<h2>wfdsfsfesfe</h2>
-							<p>vehicula urna sed justo bibendum</p>
+							<h2></h2>
+							<p>안녕하세요 저희집 막내 아토입니다.</p>
 						</header>
 						<div class="content">
-							<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel. Vestibulum et efficitur urna. Duis velit nulla, interdum sed felis sit amet, facilisis auctor nunc. Cras luctus urna at risus feugiat scelerisque nec sed diam. </p>
-							<p>Nunc fringilla metus odio, at rutrum augue tristique vel. Nulla ac tellus a neque ullamcorper porta a vitae ipsum. Morbi est sapien, hendrerit quis mi in, aliquam bibendum orci. Vestibulum imperdiet nibh vitae maximus posuere. Aenean sit amet nibh feugiat, condimentum tellus eu, malesuada nunc. Mauris ac pulvinar turpis, sit amet pharetra est. Ut bibendum justo condimentum, vehicula ex vel, venenatis libero. Etiam vehicula urna sed justo bibendum, ac lacinia nunc pulvinar. Integer nec velit orci. Vestibulum pellentesque varius dapibus. Morbi ullamcorper augue est, sed luctus orci fermentum dictum. Nunc tincidunt, nisl consequat convallis viverra, metus nisl ultricies dui, vitae dapibus ligula urna sit amet nibh. Duis ut venenatis enim.</p>
+							<p>견종 : 믹스</p>
+							<p>성별 : 남</p>
+							<p>혈통 : 모름</p>
+							<p>생일 : 2017.06</p>
 						</div>
 					</section>
 
@@ -48,22 +50,22 @@
 							<div class="gallery">
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic03.jpg"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="atoimg/qkfqkekr.jpg"><img src="atoimg/qkfqkekr.jpg" alt="" /></a>
 									</div>
 								</div>
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic01.jpg"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="atoimg/gkvna.jpg"><img src="atoimg/gkvna.jpg" alt="" /></a>
 									</div>
 								</div>
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic04.jpg"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="atoimg/apfhd.jpg"><img src="atoimg/apfhd.jpg" alt="" /></a>
 									</div>
 								</div>
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic05.jpg"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="atoimg/202311.jpg"><img src="atoimg/202311.jpg" alt="" /></a>
 									</div>
 								</div>
 							</div>
@@ -73,24 +75,87 @@
 				<!-- Three -->
 					<section id="three" class="wrapper">
 						<div class="spotlight">
-							<div class="image flush"><img src="images/pic06.jpg" alt="" /></div>
+							<div class="image flush"><img src="atoimg/dorl.jpg" alt="" /></div>
 							<div class="inner">
-								<h3>Viverra Hendrerit</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<h3>애기때</h3>
+								<p>제일 귀여웠어요</p>
 							</div>
 						</div>
 						<div class="spotlight alt">
-							<div class="image flush"><img src="images/pic07.jpg" alt="" /></div>
+							<div class="image flush"><img src="atoimg/dorl2.jpg" alt="" /></div>
 							<div  class="inner">
-								<h3>Curabitur Eget</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<h3>엄마랑 형제들</h3>
+								<p>5남매중에 막내였습니다. 그래서 덩치가 제일 작아요</p>
 							</div>
 						</div>
 						<div class="spotlight">
-							<div class="image flush"><img src="images/pic08.jpg" alt="" /></div>
+							<div class="image flush"><img src="atoimg/2018.jpg" alt="" /></div>
 							<div class="inner">
-								<h3>Morbi Eleifend</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<h3>2018년도</h3>
+								<p>처음 올때만 해도 손바닥만했는데 크는게 눈에 보이더니 베게만큼 커졌어요</p>
+							</div>
+						</div>
+						<div class="spotlight alt">
+							<div class="image flush"><img src="atoimg/201802.jpg" alt="" /></div>
+							<div  class="inner">
+								<h3>다 큰 강아지</h3>
+								<p>여기서 더 안크더라고요</p>
+							</div>
+						</div>
+						<div class="spotlight">
+							<div class="image flush"><img src="atoimg/202007.jpg" alt="" /></div>
+							<div class="inner">
+								<h3>2020년도</h3>
+								<p>이제부터 털 색만 변합니다.</p>
+							</div>
+						</div>
+						<div class="spotlight alt">
+						<div class="image flush"><img src="atoimg/202109.jpg" alt="" /></div>
+							<div  class="inner">
+								<h3>2021년도</h3>
+								<p>다른집 애들은 사람이 만지면 좋아하던데 얘는 귀찮아 하더라고요</p>
+							</div>
+						</div>
+						<div class="spotlight">
+							<div class="image flush"><img src="atoimg/202112.jpg" alt="" /></div>
+							<div class="inner">
+								<h3>피곤한 모습</h3>
+								<p>산책 갔다오고 불끄고 자자는 모습입니다</p>
+							</div>
+						</div>
+						<div class="spotlight alt">
+							<div class="image flush"><img src="atoimg/202201.jpg" alt="" /></div>
+							<div  class="inner">
+								<h3>2022년도</h3>
+								<p>산책나와서 신난 모습입니다</p>
+							</div>
+						</div>
+						<div class="spotlight">
+							<div class="image flush"><img src="atoimg/202205.jpg" alt="" /></div>
+							<div class="inner">
+								<h3>귀찮은 모습..</h3>
+								<p>군대 전역하고 오랜만에 봐서 좀 만졌더니 싫어하더라고요</p>
+							</div>
+						</div>
+						<div class="spotlight alt">
+							<div class="image flush"><img src="atoimg/202301.jpg" alt="" /></div>
+							<div  class="inner">
+								<h3>2023년도</h3>
+								<p>간식 달라고 냉장고 앞에서 눈치주는 모습</p>
+							</div>
+						</div>
+						<div class="spotlight">
+							<div class="image flush"><img src="atoimg/202312.jpg" alt="" /></div>
+							<div class="inner">
+								<h3>눈으로 욕하는 모습</h3>
+								<p>어릴때는 신발 들면 바로 도망갔는데 나이가 드니까 얌전해졌습니다</p>
+							</div>
+						</div>
+						<div class="spotlight alt">
+							<div class="image flush"><img src="atoimg/202402.jpg" alt="" /></div>
+							<div  class="inner">
+								<h3>2024년도</h3>
+								<p>애기때보다 얼굴이 많이 하얘졌어요</p>
 							</div>
 						</div>
 					</section>
@@ -99,7 +164,7 @@
 			</section>
 
 		<!-- Footer -->
-			<footer id="footer">
+			<!-- <footer id="footer">
 				<div class="container">
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
@@ -108,7 +173,7 @@
 						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
-			</footer>
+			</footer> -->
 
 		<div class="copyright">
 			Site made with <a href="https://templated.co/">TEMPLATED.CO</a>
